--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "yarn workspaces foreach -pvit run build",
 		"build:dev": "yarn workspaces foreach -pvit run build:dev",
 		"clean": "rimraf **/dist & rimraf **/*.tsbuildinfo",
+		"docs": "cpy ./packages/oe-demo/dist/*.js ./docs/js/ --flat",
 		"_test": "yarn workspaces foreach run test",
 		"_lint": "yarn workspaces foreach run lint",
 		"_build": "yarn workspaces foreach -pvit run build",
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.4.0",
 		"@types/node": "^18.11.18",
+		"cpy-cli": "^4.2.0",
 		"cross-env": "^7.0.3",
 		"jest": "^29.5.0",
 		"jest-environment-jsdom": "^29.5.0",
