--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -5,12 +5,13 @@
 		"declarationMap": true,
 		"noImplicitAny": true,
 		"module": "CommonJS",
-		"target": "ES2018",
+		"target": "es2021",
 		"allowJs": false,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true,
 		"baseUrl": ".",
 		"paths": {
 			"@openexile/oe-demo": ["packages/oe-demo"],
