--- a/packages/oe-board/package.json
+++ b/packages/oe-board/package.json
@@ -41,15 +41,13 @@
 		"jest": "^29.5.0",
 		"jest-environment-jsdom": "^29.5.0",
 		"ts-jest": "^29.0.5",
-		"typescript": "4.9.3"
+		"typescript": "4.9.4"
 	},
 	"dependencies": {
-		"@babylonjs/core": "^6.1.0",
-		"@babylonjs/gui": "^6.1.0",
-		"@babylonjs/gui-editor": "^6.1.0",
-		"@babylonjs/inspector": "^6.1.0",
-		"@babylonjs/loaders": "^6.1.0",
-		"@babylonjs/materials": "^6.1.0",
-		"@babylonjs/serializers": "^6.1.0"
+		"@babylonjs/core": "^6.2.0",
+		"@babylonjs/loaders": "^6.2.0",
+		"@babylonjs/materials": "^6.2.0",
+		"@babylonjs/serializers": "^6.2.0",
+		"babylonjs-gltf2interface": "^6.2.0"
 	}
 }
